[package]
name = "oops"
version = "0.1.0"
edition = "2021"
authors = ["ltoddy <taoliu0509@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = ""


[dependencies]
clap = { version = "3", default-features = false, features = ["derive", "std"] }
rdev = "0.5"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
