[package]
name = "oops"
version = "0.1.0"
edition = "2021"
authors = ["ltoddy <taoliu0509@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = ""

[dependencies]
clap = { version = "3", default-features = false, features = ["derive", "std"] }
configit = "0.3"
log = "0.4"
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
simplelog = "0.11"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
